--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
     <title>Tacos Eaten</title>
